# streammix

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml
deploy/: Caddyfile  README.md  docker-compose.yml
docs/: AUDIO_PROTOCOL.md  CHANNEL_CATEGORIES.md  CONTRIBUTING.md  RELAY_SELFHOST.md  STREAMER_SETUP.md  VIEWER_SETUP.md
extension/: README.md  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/src/: svelte-shims.d.ts
extension/src/audio/: decoder.ts  graph.ts  scheduler.ts
extension/src/background/: index.ts
extension/src/content/: index.ts
extension/src/platform/: detect.ts  player.ts
extension/src/popup/: popup.ts
extension/src/relay/: client.ts
extension/src/store/: prefs.ts
extension/src/ui/: Mixer.svelte  categoryDisplay.ts
obs-plugin/: CMakeLists.txt  README.md
obs-plugin/src/plugin/: channel_model.cpp  channel_model.h  dock.cpp  dock.h  plugin_main.cpp
obs-plugin/src/proto/: header.cpp  header.h
obs-plugin/test/: proto_tests.cpp
publisher/: CMakeLists.txt  README.md
publisher/src/: capture.cpp  capture.h  cli.cpp  cli.h  encoder.cpp  encoder.h  main.cpp  track.h  ws_client.cpp  ws_client.h
relay/: Dockerfile  README.md  config.example.yaml  go.mod
relay/cmd/relay/: main.go
relay/internal/: auth.go  auth_test.go  channel.go  channel_test.go  config.go  ratelimit.go  ratelimit_test.go  registry.go  registry_test.go  server.go
shared/: README.md
shared/cpp/: CMakeLists.txt
shared/cpp/src/proto/: categories.cpp  categories.h
shared/go/: categories.go  constants.go  errors.go  go.mod  header.go  messages.go  wire_test.go
shared/testvectors/: README.md
shared/ts/: package-lock.json  package.json  tsconfig.json
shared/ts/src/: categories.ts  constants.ts  errors.ts  header.ts  index.ts  messages.ts
shared/ts/test/: header.test.ts  messages.test.ts
tools/: README.md
tools/mock-publisher/: package-lock.json  package.json
tools/mock-publisher/src/: main.ts
tools/mock-subscriber/: package-lock.json  package.json  tsconfig.json
tools/mock-subscriber/src/: main.ts
